# nepsedata

./: README.md  pyproject.toml
src/nepsedata/: __init__.py
src/nepsedata_dl/: __init__.py  api.py  download.py
