[project]
name = "nepsedata-dl"
version = "0.1.0"
description = "Download all NEPSE OHLCV data organized by sector"
readme = "README.md"
authors = [{ name = "Krishna Acharya", email = "bokrebhaladmi@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pandas>=2.0", "requests>=2.31", "rich>=14.0", "tqdm>=4.60"]

[project.scripts]
nepsedata-dl = "nepsedata_dl:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
